tirei os arquivos .js

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "module": "ESNext",
         "strict": true,
         "target": "ESNEXT",
+        "outDir": "dist"
         
     },
     "exclude": [
